# Shinoda-Trading

./: Cargo.toml  README.md
.aone_copilot/openspec/: openspec.config.json  project.md
.aone_copilot/openspec/changes/add-daily-bar-backtest-mvp/: design.md
.aone_copilot/openspec/changes/add-daily-bar-backtest-mvp/specs/backtest-engine/: spec.md
.aone_copilot/openspec/changes/add-daily-bar-backtest-mvp/specs/data-loader/: spec.md
.aone_copilot/openspec/changes/add-daily-bar-backtest-mvp/specs/metrics/: spec.md
.aone_copilot/openspec/changes/archive/2026-03-14-add-daily-bar-backtest-mvp/: proposal.md  tasks.md
.aone_copilot/openspec/changes/archive/2026-03-14-add-daily-bar-backtest-mvp/specs/cli/: spec.md
.aone_copilot/openspec/changes/archive/2026-03-14-add-daily-bar-backtest-mvp/specs/strategy/: spec.md
.aone_copilot/openspec/changes/archive/2026-03-22-add-alpha-vantage-data-fetcher/: design.md  proposal.md  tasks.md
.aone_copilot/openspec/changes/archive/2026-03-22-add-mean-reversion-zscore-strategy/: design.md  proposal.md  tasks.md
.aone_copilot/openspec/specs/backtest-engine/: spec.md
.aone_copilot/openspec/specs/cli/: spec.md
.aone_copilot/openspec/specs/data-loader/: spec.md
.aone_copilot/openspec/specs/metrics/: spec.md
.aone_copilot/openspec/specs/strategy/: spec.md
data/: AAPL.csv
src/: backtest.rs  data.rs  fetcher.rs  main.rs  metrics.rs  portfolio.rs  strategy.rs  types.rs
src/strategies/: mean_reversion.rs  mean_reversion_zscore.rs  mod.rs  momentum.rs
(+4 files in other folders)
