[package]
name = "quant_backtest"
version = "0.1.0"
edition = "2021"
description = "Shinoda Trading - US Stock Daily Bar Backtest System MVP"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
